--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" style="--mouse-x: 0; --mouse-y: 0;">
   <head></head>
-  <body style="width:100vw;height:100vh;background-image:url(woupelai.gif);background-size:clamp(8px,calc(var(--mouse-y)/1*1px),100vmin)auto;background-position:calc(var(--mouse-x)*1px) 50%;overflow:hidden;">
+  <body style="width:100vw;height:100vh;background-image:url(pizza.gif);background-size:clamp(8px,calc(var(--mouse-y)/1*1px),100vmin)auto;background-position:calc(var(--mouse-x)*1px) 50%;overflow:hidden;">
     <script>
       const d=document.documentElement;d.addEventListener('mousemove',e=>{d.style.setProperty('--mouse-x', e.clientX);d.style.setProperty('--mouse-y', e.clientY)});
     </script>
